# tryspace-simulith

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
docker/: Dockerfile.director  Dockerfile.server
include/: simulith.h  simulith_42_commands.h  simulith_42_context.h  simulith_component.h  simulith_director.h  simulith_gpio.h  simulith_i2c.h  simulith_spi.h  simulith_transport.h  simulith_uart.h
src/: 42_stubs.c  simulith_42_command_api.c  simulith_client.c  simulith_common.c  simulith_director.c  simulith_gpio.c  simulith_i2c.c  simulith_server.c  simulith_server_standalone.c  simulith_spi.c  simulith_time.c  simulith_transport.c  simulith_uart.c
test/: CMakeLists.txt  Dockerfile.director  Dockerfile.server  Dockerfile.sim  test_42.c  test_common.c  test_gpio.c  test_i2c.c  test_simulith.c  test_spi.c  test_time.c  test_transport.c  test_uart.c
